...
            "state": "translated",
            "value": "Filtrer"
          }
        }
      }
    },
    "editor.sidebar.filter.clear": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Clear Filter"
...
    "settings.appearance": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Appearance"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Apparence"
...
    "settings.language": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Language"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Langue"
...
            "state": "translated",
            "value": "Largeur"
          }
        }
      }
    },
    "tool.crop.done": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
...
            "state": "translated",
            "value": "Préréglages"
          }
        }
      }
    },
    "welcome.chooseFolder": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Choose Folder…"
...
